[package]
name = "weave"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
lru = "0.17.0"
rand = "0.10.1"
reqwest = { version = "0.13.2", features = ["blocking", "rustls"] }
robotstxt = "0.3.0"
scraper = "0.26.0"
thiserror = "2.0.18"
url = "2.5.8"
